@@ -1,5 +1,5 @@
 /*
- *   $Id: copyright.blurb,v 1.2 2001/11/14 19:58:11 lutchann Exp $
+ *   $Id: copyright.blurb,v 1.3 2005/10/18 19:17:29 lutchann Exp $
  *
  *   Authors:
  *    Lars Fenneberg		<lf@elemental.net>	 
@@ -9,6 +9,6 @@
  *
  *   The license which is distributed with this software in the file COPYRIGHT
  *   applies to this software. If your distribution is missing this file, you
- *   may request it from <lutchann@litech.org>.
+ *   may request it from <pekkas@netcore.fi>.
  *
  */
